--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <div class="header">
-        <img src="atom_logo.png">
+        <img src="data/img/atom_logo.png">
         <a href="#greets"><h3>Chi Siamo</h3></a>
         <a href="#comunications"><h3>Circolari</h3></a>
         <a href="#contacts"><h3>Contatti</h3></a>
