--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <a href="#greets"><h3>Chi Siamo</h3></a>
         <a href="#comunications"><h3>Circolari</h3></a>
         <a href="#contacts"><h3>Contatti</h3></a>
-        <a href="" target="_blank"><h3>Registro elettronico</h3></a>
+        <a href="void" target="_blank"><h3>Registro elettronico</h3></a>
       </div>
-      <div class="bigtitle"><h1>Liceo Scientifico Musicale Farnesina</h1></div>
+      <div class="bigtitle">
+        <img src='data/img/school1.jpg'>
+        <h1>LICEO SCIENTIFICO MUSICALE FARNESINA</h1>
+      </div>
       <div id="greets">
         <h1>Chi Siamo?</h1>
         <p>Dovro' sostituire questo paragrafo con qualche cazzata su quanto questo sia bello  ed efficiente il liceo</p>
