new div "main", social logos

--- a/index.html
+++ b/index.html
@@ -18,29 +18,36 @@
         <img src='data/img/school1.jpg'>
         <h1>LICEO SCIENTIFICO MUSICALE FARNESINA</h1>
       </div>
-      <div id="greets">
-        <h1>Chi Siamo?</h1>
-        <p>Dovro' sostituire questo paragrafo con qualche cazzata su quanto questo sia bello  ed efficiente il liceo</p>
-      </div>
-      <div id="comunications">
-        <h1>QUI CI SARANNO LE ULTIME CIRCOLARI</h1>
-      </div>
-      <div id="contacts">
-        <h1>Contatti</h1>
-        <div class="infocontact">
-          <p>Sede Centrale</p>
-          <p>N06 111111 </p>
-          <p>VIA orti della etc</p>
+      <div class="main">
+        <div id="greets">
+          <h1>Chi Siamo?</h1>
+          <p>Dovro' sostituire questo paragrafo con qualche cazzata su quanto questo sia bello  ed efficiente il liceo</p>
         </div>
-        <div class="infocontact">
-          <p>Sede Gosio</p>
-          <p>N06 2222222 </p>
-          <p>VIA orti della etc</p>
+        <div id="comunications">
+          <h1>QUI CI SARANNO LE ULTIME CIRCOLARI</h1>
         </div>
-        <div class="infocontact">
-          <p>Sede robilant</p>
-          <p>N06 111111 </p>
-          <p>VIA orti della etc</p>
+        <div id="contacts">
+          <h1>Contatti</h1>
+          <div class="social">
+            <img src="data/img/fb_logo.png">
+            <img src="data/img/instagram-logo.png">
+            <img src="data/img/telegram_logo.png">
+          </div>
+          <div class="infocontact">
+            <p>Sede Centrale</p>
+            <p>N06 111111 </p>
+            <p>VIA orti della etc</p>
+          </div>
+          <div class="infocontact">
+            <p>Sede Gosio</p>
+            <p>N06 2222222 </p>
+            <p>VIA orti della etc</p>
+          </div>
+          <div class="infocontact">
+            <p>Sede robilant</p>
+            <p>N06 111111 </p>
+            <p>VIA orti della etc</p>
+          </div>
         </div>
       </div>
       <div class="footer">useless infoooo</div>
