--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <p>N06 111111 </p>
             <p>VIA orti della etc</p>
           </div>
+          <div class="map">
+            <!--to insert map with three location link to GMaps -->
+          </div>
         </div>
       </div>
       <div class="footer">useless infoooo</div>
