added infos and changed placeholder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#greets"><h3>Chi Siamo</h3></a>
         <a href="#comunications"><h3>Circolari</h3></a>
         <a href="#contacts"><h3>Contatti</h3></a>
-        <a href="void" target="_blank"><h3>Registro elettronico</h3></a>
+        <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><h3>Registro elettronico</h3></a>
       </div>
       <div class="bigtitle">
         <img src='data/img/school1.jpg'>
@@ -21,32 +21,36 @@
       <div class="main">
         <div id="greets">
           <h1>Chi Siamo?</h1>
-          <p>Dovro' sostituire questo paragrafo con qualche cazzata su quanto questo sia bello  ed efficiente il liceo</p>
+          <p>Un noto scienziato, alcuni dicono che fu Bertrand Russell, dava una volta una conferenza sull'astronomia. In essa descriveva come la Terra girasse attorno al Sole e come questo, a sua volta, girasse attorno al centro di una vasta collezione di stelle conosciuta come la nostra galassia. Alla fine della chiacchierata, una simpatica signora avanzata in età si alzò e gli disse dal fondo della sala: "Quello che ci ha raccontato lei non è più che sciocchezze. Il mondo è in realtà una piattaforma piana sostentata sul guscio di una tartaruga gigante."</p>
         </div>
         <div id="comunications">
           <h1>QUI CI SARANNO LE ULTIME CIRCOLARI</h1>
         </div>
         <div id="contacts">
           <h1>Contatti</h1>
+          <div class="common_info">
+            <h4>Segreteria Didattica: +39 06121127045</h4>
+            <a href="mailto:rmps49000c@istruzione.it">eMail</a>
+          </div>
+          <div class="infocontact">
+            <h4>Sede Centrale</h4>
+            <p>+39 06121127045</p>
+            <p>Via dei Giuochi Istmici, 64</p>
+          </div>
+          <div class="infocontact">
+            <h4>Sede Gosio</h4>
+            <p>+39 06121124705</p>
+            <p>Via Bartolomeo Gosio, 90</p>
+          </div>
+          <div class="infocontact">
+            <h4>Sede Robilant</h4>
+            <p>+39 0633221715</p>
+            <p>Via dei Robilant, 7</p>
+          </div>
           <div class="social">
             <img src="data/img/fb_logo.png">
             <img src="data/img/instagram-logo.png">
             <img src="data/img/telegram_logo.png">
-          </div>
-          <div class="infocontact">
-            <p>Sede Centrale</p>
-            <p>N06 111111 </p>
-            <p>VIA orti della etc</p>
-          </div>
-          <div class="infocontact">
-            <p>Sede Gosio</p>
-            <p>N06 2222222 </p>
-            <p>VIA orti della etc</p>
-          </div>
-          <div class="infocontact">
-            <p>Sede robilant</p>
-            <p>N06 111111 </p>
-            <p>VIA orti della etc</p>
           </div>
           <div class="map">
             <!--to insert map with three location link to GMaps -->
