--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <body>
       <div class="header">
         <img src="data/img/atom_logo.png">
-        <a href="#greets"><h3>Chi Siamo</h3></a>
-        <a href="#comunications"><h3>Circolari</h3></a>
-        <a href="#contacts"><h3>Contatti</h3></a>
-        <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><h3>Registro elettronico</h3></a>
-      </div>
+          <a href="#greets"><h3>Chi Siamo</h3></a>
+          <a href="#comunications"><h3>Circolari</h3></a>
+          <a href="#contacts"><h3>Contatti</h3></a>
+          <div class="RE">
+            <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
+              <img src="data/img/Logo_RE_Family.png">
+              <div class="overlay fam"><p>Famiglie</p></div>
+            </a>
+            <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
+              <img src="data/img/Logo_RE_Teachers.png">
+              <div class="overlay teach"><p>Docenti</p></div>
+            </a>
+          </div>
+          </div>
       <div class="bigtitle">
         <img src='data/img/school1.jpg'>
         <h1>LICEO SCIENTIFICO MUSICALE FARNESINA</h1>
@@ -29,8 +38,8 @@
         <div id="contacts">
           <h1>Contatti</h1>
           <div class="common_info">
-            <h4>Segreteria Didattica: +39 06121127045</h4>
-            <a href="mailto:rmps49000c@istruzione.it">eMail</a>
+            <h4>Segreteria Didattica:<wbr> +39 06121127045</h4>
+            <a href="mailto:rmps49000c@istruzione.it"><img src="data/img/mail_logo.png"></a>
           </div>
           <div class="infocontact">
             <h4>Sede Centrale</h4>
