--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
               <div class="overlay teach"><p>Docenti</p></div>
             </a>
           </div>
-          </div>
-      <div class="bigtitle">
-        <img src='data/img/school1.jpg'>
-        <h1>LICEO SCIENTIFICO MUSICALE FARNESINA</h1>
       </div>
-      <div class="main">
+      <div class="bigtitle">
+        <img class="background" alt="Liceo Farnesina" src='data/img/school1.jpg'>
+        <div class="frontground">
+          <img src="data/img/atom_logo.png" alt="Farnesina Logo">
+          <img src="data/img/Logo_RE_white.png" alt="RE Logo">
+          <div class="nav">
+            <a href="#main">HOME</a>
+            <a href="#greets">CHI SIAMO</a>
+            <a href="#comunications">CIRCOLARI</a>
+            <a href="#contacts">CONTATTI</a>
+          </div>
+          <h1>LICEO SCIENTIFICO MUSICALE FARNESINA</h1>
+          <a href="#main" class="hvr-hang"><img src="data/img/arrow.png"></a>
+        </div>
+      </div>
+      <div id="main">
         <div id="greets">
           <h1>Chi Siamo?</h1>
           <p>Un noto scienziato, alcuni dicono che fu Bertrand Russell, dava una volta una conferenza sull'astronomia. In essa descriveva come la Terra girasse attorno al Sole e come questo, a sua volta, girasse attorno al centro di una vasta collezione di stelle conosciuta come la nostra galassia. Alla fine della chiacchierata, una simpatica signora avanzata in età si alzò e gli disse dal fondo della sala: "Quello che ci ha raccontato lei non è più che sciocchezze. Il mondo è in realtà una piattaforma piana sostentata sul guscio di una tartaruga gigante."</p>
