new animation on .bigtitle

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#contacts">CONTATTI</a>
           </div>
           <h1>LICEO SCIENTIFICO MUSICALE FARNESINA</h1>
-          <a href="#main" class="hvr-hang"><img src="data/img/arrow.png"></a>
+          <a href="#main"><img src="data/img/arrow.png"></a>
         </div>
       </div>
       <div id="main">
