--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <div class="overlay fam"><p>Famiglie</p></div>
             </a>
             <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
-              <img src="data/img/Logo_RE_Teachers.png">
+              <img src="data/img/Logo_RE_teachers.png">
               <div class="overlay teach"><p>Docenti</p></div>
             </a>
           </div>
@@ -27,7 +27,11 @@
         <img class="background" alt="Liceo Farnesina" src='data/img/school1.jpg'>
         <div class="frontground">
           <img src="data/img/atom_logo.png" alt="Farnesina Logo">
-          <img src="data/img/Logo_RE_white.png" alt="RE Logo">
+          <div class="RE">
+            <img src="data/img/Logo_RE_white.png">
+            <h3><a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">Famiglie</a></h3>
+            <h3><a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">Docenti</a></h3>
+          </div>
           <div class="nav">
             <a href="#main">HOME</a>
             <a href="#greets">CHI SIAMO</a>
@@ -69,7 +73,7 @@
           </div>
           <div class="social">
             <img src="data/img/fb_logo.png">
-            <img src="data/img/instagram-logo.png">
+            <img src="data/img/Instagram-logo.png">
             <img src="data/img/telegram_logo.png">
           </div>
           <div class="map">
