inverted a and h3 to obtain clickable buttons

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <img src="data/img/atom_logo.png" alt="Farnesina Logo">
           <div class="RE">
             <img src="data/img/Logo_RE_white.png">
-            <h3><a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">Famiglie</a></h3>
-            <h3><a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">Docenti</a></h3>
+            <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><h3>Famiglie</h3></a>
+            <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><h3>Docenti</h3></a>
           </div>
           <div class="nav">
             <a href="#main">HOME</a>
