added icons, and a new image map

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <title>School</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
       <div class="header">
+        <!--TODO temporary Logo-->
         <img src="data/img/atom_logo.png">
           <a href="#greets"><h3>Chi Siamo</h3></a>
           <a href="#comunications"><h3>Circolari</h3></a>
@@ -53,34 +55,36 @@
         <div id="contacts">
           <h1>Contatti</h1>
           <div class="common_info">
-            <h4>Segreteria Didattica:<wbr> +39 06121127045</h4>
+            <h4>Segreteria Didattica:</h4>
+            <h4>+3906121127045</h4>
             <a href="mailto:rmps49000c@istruzione.it"><img src="data/img/mail_logo.png"></a>
           </div>
           <div class="infocontact">
             <h4>Sede Centrale</h4>
-            <p>+39 06121127045</p>
-            <p>Via dei Giuochi Istmici, 64</p>
+            <p><i class="material-icons">call</i>+39 06121127045</p>
+            <a href="https://www.google.it/maps/place/Liceo+Scientifico+Statale+Farnesina/@41.9460396,12.4601698,17z/data=!3m1!4b1!4m5!3m4!1s0x132f60ca1104cf89:0xa9bd3f22c53dbbd3!8m2!3d41.9460356!4d12.4623585" target="_blank"><p><i class="material-icons">room</i>Via dei Giuochi Istmici, 64</p></a>
           </div>
           <div class="infocontact">
             <h4>Sede Gosio</h4>
-            <p>+39 06121124705</p>
-            <p>Via Bartolomeo Gosio, 90</p>
+            <p><i class="material-icons">call</i>+39 06121124705</p>
+            <a href="https://www.google.it/maps/place/Liceo+Statale+Farnesina+-+sede+Gosio/@41.9409163,12.4721535,17z/data=!3m1!4b1!4m5!3m4!1s0x132f60d1b185e2f1:0x82c3b5022501e96b!8m2!3d41.9409123!4d12.4743422" target="_blank"><p><i class="material-icons">room</i>Bartolomeo Gosio, 90</p></a>
           </div>
           <div class="infocontact">
             <h4>Sede Robilant</h4>
-            <p>+39 0633221715</p>
-            <p>Via dei Robilant, 7</p>
+            <p><i class="material-icons">call</i>+39 0633221715</p>
+            <a href="https://www.google.it/maps/place/Liceo+Statale+Farnesina+-+sede+Robilant/@41.9357801,12.4619739,17z/data=!3m1!4b1!4m5!3m4!1s0x132f60c71fd7dfc5:0x6d7546b5e1c6adc4!8m2!3d41.9357761!4d12.4641626" target="_blank"><p><i class="material-icons">room</i>Via dei Robilant, 7</p></a>
           </div>
           <div class="social">
-            <img src="data/img/fb_logo.png">
-            <img src="data/img/Instagram-logo.png">
-            <img src="data/img/telegram_logo.png">
+            <!--TODO create an official instagram/telegram/facebook page-->
+            <a href="https://thebestmotherfucking.website/" target="_blank"><img src="data/img/fb_logo.png"></a>
+            <a href="https://thebestmotherfucking.website/" target="_blank"><img src="data/img/Instagram-logo.png"></a>
+            <a href="https://thebestmotherfucking.website/" target="_blank"><img src="data/img/telegram_logo.png"></a>
           </div>
           <div class="map">
-            <!--to insert map with three location link to GMaps -->
+            <a alt="Farnesina Map" href="https://www.google.it/maps/search/liceo+scientifico+farnesina/@41.9392278,12.4650308,15.38z" target="_blank"><img src="data/img/map.png"></a>
           </div>
         </div>
       </div>
-      <div class="footer">useless infoooo</div>
+      <div class="footer">useless infoooo<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h3 id="t">ciao</h3></div>
     </body>
   </html>
