added timetable button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div id="greets">
           <h1>Chi Siamo?</h1>
           <p>Un noto scienziato, alcuni dicono che fu Bertrand Russell, dava una volta una conferenza sull'astronomia. In essa descriveva come la Terra girasse attorno al Sole e come questo, a sua volta, girasse attorno al centro di una vasta collezione di stelle conosciuta come la nostra galassia. Alla fine della chiacchierata, una simpatica signora avanzata in età si alzò e gli disse dal fondo della sala: "Quello che ci ha raccontato lei non è più che sciocchezze. Il mondo è in realtà una piattaforma piana sostentata sul guscio di una tartaruga gigante."</p>
+          <div class="buttons"></div>
         </div>
         <div id="comunications">
           <h1>QUI CI SARANNO LE ULTIME CIRCOLARI</h1>
@@ -57,6 +58,11 @@
           <div class="common_info">
             <h4>Segreteria Didattica:</h4>
             <h4>+3906121127045</h4>
+            <div class="timetable">
+              <h5>Orari</h5>
+              <p>lunedì e mercoledì 8:30-11:30<br>martedì 14:00-16:00<br>venerdì 11:00-14:00
+              </p>
+            </div>
             <a href="mailto:rmps49000c@istruzione.it"><img src="data/img/mail_logo.png"></a>
           </div>
           <div class="infocontact">
@@ -81,7 +87,7 @@
             <a href="https://thebestmotherfucking.website/" target="_blank"><img src="data/img/telegram_logo.png"></a>
           </div>
           <div class="map">
-            <a alt="Farnesina Map" href="https://www.google.it/maps/search/liceo+scientifico+farnesina/@41.9392278,12.4650308,15.38z" target="_blank"><img src="data/img/map.png"></a>
+            <a alt="Farnesina Map" href="https://www.google.it/maps/search/liceo+scientifico+farnesina/@41.9392278,12.4650308,15.38z" target="_blank"><img src="data/img/map.png"><p>Mappa</p></a>
           </div>
         </div>
       </div>
