new buttons and styiling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
         <div id="greets">
           <h1>Chi Siamo?</h1>
           <p>Un noto scienziato, alcuni dicono che fu Bertrand Russell, dava una volta una conferenza sull'astronomia. In essa descriveva come la Terra girasse attorno al Sole e come questo, a sua volta, girasse attorno al centro di una vasta collezione di stelle conosciuta come la nostra galassia. Alla fine della chiacchierata, una simpatica signora avanzata in età si alzò e gli disse dal fondo della sala: "Quello che ci ha raccontato lei non è più che sciocchezze. Il mondo è in realtà una piattaforma piana sostentata sul guscio di una tartaruga gigante."</p>
-          <div class="buttons"></div>
+          <div class="buttons">
+            <h2>Progetti</h2>
+            <h2>Sezioni</h2>
+            <h2>Storia</h2>
+            <h2>Organizzazione</h2>
+            <h2>Regolamento</h2>
+          </div>
         </div>
         <div id="comunications">
           <h1>QUI CI SARANNO LE ULTIME CIRCOLARI</h1>
