New buttons and sub-buttons, corrected footer

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       <div class="header">
         <!--TODO temporary Logo-->
         <img src="data/img/atom_logo.png">
-          <a href="#greets"><h3>Chi Siamo</h3></a>
-          <a href="#comunications"><h3>Circolari</h3></a>
-          <a href="#contacts"><h3>Contatti</h3></a>
-          <div class="RE">
-            <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
-              <img src="data/img/Logo_RE_Family.png">
-              <div class="overlay fam"><p>Famiglie</p></div>
-            </a>
-            <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
-              <img src="data/img/Logo_RE_teachers.png">
-              <div class="overlay teach"><p>Docenti</p></div>
-            </a>
-          </div>
+        <a href="#greets"><h3>Chi Siamo</h3></a>
+        <a href="#comunications"><h3>Circolari</h3></a>
+        <a href="#contacts"><h3>Contatti</h3></a>
+        <div class="RE">
+          <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
+            <img src="data/img/Logo_RE_Family.png">
+            <div class="overlay fam"><p>Famiglie</p></div>
+          </a>
+          <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
+            <img src="data/img/Logo_RE_teachers.png">
+            <div class="overlay teach"><p>Docenti</p></div>
+          </a>
+        </div>
       </div>
       <div class="bigtitle">
         <img class="background" alt="Liceo Farnesina" src='data/img/school1.jpg'>
@@ -49,11 +49,30 @@
           <h1>Chi Siamo?</h1>
           <p>Un noto scienziato, alcuni dicono che fu Bertrand Russell, dava una volta una conferenza sull'astronomia. In essa descriveva come la Terra girasse attorno al Sole e come questo, a sua volta, girasse attorno al centro di una vasta collezione di stelle conosciuta come la nostra galassia. Alla fine della chiacchierata, una simpatica signora avanzata in età si alzò e gli disse dal fondo della sala: "Quello che ci ha raccontato lei non è più che sciocchezze. Il mondo è in realtà una piattaforma piana sostentata sul guscio di una tartaruga gigante."</p>
           <div class="buttons">
-            <h2>Progetti</h2>
-            <h2>Sezioni</h2>
-            <h2>Storia</h2>
-            <h2>Organizzazione</h2>
-            <h2>Regolamento</h2>
+            <div class="bt">
+              <h2>Progetti</h2>
+              <a href="greets/projects/RIMUN/index.html">RIMUN</a>
+              <a href="greets/projects/MEP/index.html">MEP</a>
+              <a href="greets/projects/Olimpiadi_Fisica/index.html">Olimpiadi di Fisica</a>
+              <a href="greets/projects/Olimpiadi_Matematica/index.html">Olimpiadi di Matematica</a>
+              <a href="greets/projects/Certamen_Farnesinum/index.html">Certamen Farnesinum</a>
+              <a href="greets/projects/LAB2GO/index.html">LAB2GO</a>
+            </div>
+            <div class="single">
+              <a href="greets/employees/index.html"><h2>Organizzazione</h2></a>
+            </div>
+            <div class="single">
+              <a href="greets/rules/index.html"><h2>Regolamento</h2></a>
+            </div>
+            <div class="bt">
+              <h2>Sezioni</h2>
+              <a href="greets/classes/scientifico/index.html">Scientifico</a>
+              <a href="greets/classes/musicale/index.html">Musicale</a>
+              <a href="greets/classes/cambridge/index.html">Cambridge</a>
+            </div>
+            <div class="single">
+              <a href="greets/history/index.html"><h2>Storia</h2></a>
+            </div>
           </div>
         </div>
         <div id="comunications">
@@ -97,6 +116,8 @@
           </div>
         </div>
       </div>
-      <div class="footer">useless infoooo<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h3 id="t">ciao</h3></div>
+      <div class="footer">
+        <p>GPL License 3.0, Matteo Migliarini 2018</p>
+      </div>
     </body>
-  </html>
+</html>
