New divs to support optimized buttons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
           </a>
         </div>
       </div>
+      <div class="menu">
+        <img src="data/img/atom_logo.png">
+        <div class="openmenu">
+          <a href="#greets"><h3>Chi Siamo</h3></a>
+          <a href="#comunications"><h3>Circolari</h3></a>
+          <a href="#contacts"><h3>Contatti</h3></a>
+        </div>
+      </div>
       <div class="bigtitle">
         <img class="background" alt="Liceo Farnesina" src='data/img/school1.jpg'>
         <div class="frontground">
@@ -50,13 +58,15 @@
           <p>Un noto scienziato, alcuni dicono che fu Bertrand Russell, dava una volta una conferenza sull'astronomia. In essa descriveva come la Terra girasse attorno al Sole e come questo, a sua volta, girasse attorno al centro di una vasta collezione di stelle conosciuta come la nostra galassia. Alla fine della chiacchierata, una simpatica signora avanzata in età si alzò e gli disse dal fondo della sala: "Quello che ci ha raccontato lei non è più che sciocchezze. Il mondo è in realtà una piattaforma piana sostentata sul guscio di una tartaruga gigante."</p>
           <div class="buttons">
             <div class="bt">
-              <h2>Progetti</h2>
-              <a href="greets/projects/RIMUN/index.html">RIMUN</a>
-              <a href="greets/projects/MEP/index.html">MEP</a>
-              <a href="greets/projects/Olimpiadi_Fisica/index.html">Olimpiadi di Fisica</a>
-              <a href="greets/projects/Olimpiadi_Matematica/index.html">Olimpiadi di Matematica</a>
-              <a href="greets/projects/Certamen_Farnesinum/index.html">Certamen Farnesinum</a>
-              <a href="greets/projects/LAB2GO/index.html">LAB2GO</a>
+              <h2>I Progetti</h2>
+              <div>
+                <a href="greets/projects/RIMUN/index.html">RIMUN</a>
+                <a href="greets/projects/MEP/index.html">MEP</a>
+                <a href="greets/projects/Olimpiadi_Fisica/index.html">Olimpiadi di Fisica</a>
+                <a href="greets/projects/Olimpiadi_Matematica/index.html">Olimpiadi di Matematica</a>
+                <a href="greets/projects/Certamen_Farnesinum/index.html">Certamen Farnesinum</a>
+                <a href="greets/projects/LAB2GO/index.html">LAB2GO</a>
+              </div>
             </div>
             <div class="single">
               <a href="greets/employees/index.html"><h2>Organizzazione</h2></a>
@@ -66,9 +76,11 @@
             </div>
             <div class="bt">
               <h2>Sezioni</h2>
-              <a href="greets/classes/scientifico/index.html">Scientifico</a>
-              <a href="greets/classes/musicale/index.html">Musicale</a>
-              <a href="greets/classes/cambridge/index.html">Cambridge</a>
+              <div>
+                <a href="greets/classes/scientifico/index.html">Scientifico</a>
+                <a href="greets/classes/musicale/index.html">Musicale</a>
+                <a href="greets/classes/cambridge/index.html">Cambridge</a>
+              </div>
             </div>
             <div class="single">
               <a href="greets/history/index.html"><h2>Storia</h2></a>
