menu and relative buttons

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
             <div class="overlay teach"><p>Docenti</p></div>
           </a>
         </div>
-      </div>
-      <div class="menu">
-        <img src="data/img/atom_logo.png">
-        <div class="openmenu">
-          <a href="#greets"><h3>Chi Siamo</h3></a>
-          <a href="#comunications"><h3>Circolari</h3></a>
-          <a href="#contacts"><h3>Contatti</h3></a>
+        <div class="menu">
+          <img src="data/img/atom_logo.png">
+          <!--TODO temporary logos: menu, X-->
+          <img src="data/img/telegram_logo.png">
+          <div class="openmenu">
+            <a href="#greets"><h3>Chi Siamo</h3></a>
+            <a href="#comunications"><h3>Circolari</h3></a>
+            <a href="#contacts"><h3>Contatti</h3></a>
+          </div>
         </div>
       </div>
       <div class="bigtitle">
