new RE on header

--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
         <a href="#comunications"><h3>Circolari</h3></a>
         <a href="#contacts"><h3>Contatti</h3></a>
         <div class="RE">
-          <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
-            <img src="data/img/Logo_RE_Family.png">
-            <div class="overlay fam"><p>Famiglie</p></div>
-          </a>
-          <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank">
-            <img src="data/img/Logo_RE_teachers.png">
-            <div class="overlay teach"><p>Docenti</p></div>
-          </a>
+          <img src="data/img/Logo_RE_white.png">
+          <a href="https://family.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><p>Famiglie</p></a>
+          <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><p>Docenti</p></a>
         </div>
         <div class="menu">
           <img src="data/img/atom_logo.png">
