updated License in footer, added new logo

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
           <a href="https://www.sissiweb.it/Secret/REStart.aspx?Customer_ID=05723890587" target="_blank"><p>Docenti</p></a>
         </div>
         <div class="menu">
-          <img src="data/img/atom_logo.png">
-          <!--TODO temporary logos: menu, X-->
-          <img src="data/img/telegram_logo.png">
+          <div class="hamburger" id="hamburger-1">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </div>
           <div class="openmenu">
             <a href="#greets"><h3>Chi Siamo</h3></a>
             <a href="#comunications"><h3>Circolari</h3></a>
@@ -126,7 +128,7 @@
         </div>
       </div>
       <div class="footer">
-        <p>GPL License 3.0, Matteo Migliarini 2018</p>
+        <p>GNU GPL License 3.0, Matteo Migliarini 2018</p>
       </div>
     </body>
 </html>
