--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <link rel="shortcut icon" type="image/x-icon" href="data/img/favicon.ico" />
+        <meta name="keywords" content="School,Farnesina,Liceo,Scientifico,Musicale">
+        <meta name="description" content="Pagina del Liceo Farnesina">
+        <meta name="author" content="Matteo Migliarini">
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>
           $(document).ready(function(){
