--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <meta name="keywords" content="School,Farnesina,Liceo,Scientifico,Musicale">
         <meta name="description" content="Pagina del Liceo Farnesina">
         <meta name="author" content="Matteo Migliarini">
+        <script src="https://unpkg.com/react@16/umd/react.development.js" ></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" ></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
       <div class="header">
@@ -94,7 +97,7 @@
           </div>
         </div>
         <div id="comunications">
-          <h1>QUI CI SARANNO LE ULTIME CIRCOLARI</h1>
+          <!-- Here goes react.js -->
         </div>
         <div id="contacts">
           <h1>Contatti</h1>
@@ -146,4 +149,5 @@
         to_drop.classList.toggle('is_active');
       };
     </script>
+    <script type="text/babel" src="data/index.js"></script>
 </html>
