--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <h1>Contatti</h1>
           <div class="common_info">
             <h4>Segreteria Didattica:</h4>
-            <h4>+3906121127045</h4>
+            <h4><i class="material-icons">call</i> +3906121127045</h4>
             <div class="timetable">
               <h5>Orari</h5>
               <p>lunedì e mercoledì 8:30-11:30<br>martedì 14:00-16:00<br>venerdì 11:00-14:00
