--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
     <head>
         <title>School</title>
         <link rel="stylesheet" type="text/css" href="theme.css">
